--- a/src/components/SignInButton/styles.module.scss
+++ b/src/components/SignInButton/styles.module.scss
@@ -3,14 +3,14 @@
   align-items: center;
   justify-content: center;
 
-  padding: 1rem 1rem;
+  padding: 1rem 1.375rem;
   border-radius: 3rem;
   background: var(--cyan-800);
 
   transition: filter 0.2s;
 
   &:hover {
-    filter: brightness(0.9)
+    filter: brightness(0.9);
   }
 
   svg {
@@ -32,4 +32,3 @@
     font-weight: bold;
   }
 }
-
