--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,22 +10,23 @@
   --gray-100: #e1e1e6;
   --gray-300: #a8a8b3;
   --gray-700: #323238;
-  --gray-800: #29292E;
+  --gray-800: #29292e;
   --gray-900: #121214;
-  
+
   --cyan-500: #61dafb;
   --cyan-800: #1f2729;
 
   --yellow-500: #eba417;
 }
 
-@media(max-width: 1080px){ //iPad
+@media (max-width: 1080px) {
+  //iPad
   html {
     font-size: 93.75%;
   }
 }
 
-@media(max-width: 720px){
+@media (max-width: 720px) {
   html {
     font-size: 87.5%;
   }
@@ -36,7 +37,11 @@ body {
   color: var(--white);
 }
 
-body, input, textarea, select, button {
+body,
+input,
+textarea,
+select,
+button {
   font: 400 1rem "Roboto", sans-serif;
 }
 
@@ -50,3 +55,37 @@ a {
   text-decoration: none;
 }
 
+#nprogress {
+  pointer-events: none;
+
+  & .bar {
+    background: var(--yellow-500);
+
+    position: fixed;
+    z-index: 1031;
+    top: calc(5rem - 4px);
+    left: 0;
+
+    width: 100%;
+    height: 2px;
+  }
+
+  & .peg {
+    display: block;
+    position: absolute;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 10px var(--yellow-500), 0 0 5px var(--yellow-500);
+    opacity: 1;
+  }
+}
+
+.nprogress-custom-parent {
+  overflow: hidden;
+  position: relative;
+
+  & #nprogress .bar {
+    position: absolute;
+  }
+}
